--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android_sprint3_challenge">
+    package="com.example.Pokedex">
 
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
@@ -11,8 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetailView"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.Pokedex.DetailView"></activity>
+        <activity android:name="com.example.Pokedex.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
