--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.1.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.1.0'
     implementation 'com.google.android.material:material:1.1.0-alpha09'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
